--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/img_icon"
         android:layout_width="100dp"
         android:layout_height="100dp"
